AvoidInfix in scalafmt.conf

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,7 +6,7 @@ danglingParentheses        = true
 docstrings                 = JavaDoc
 indentOperator             = spray
 maxColumn                  = 120
-rewrite.rules              = [RedundantParens, SortImports]
+rewrite.rules              = [RedundantParens, SortImports, AvoidInfix]
 unindentTopLevelOperators  = true
 align.openParenDefnSite    = true
 align.openParenCallSite    = true
