align.tokens in scalafmt.conf

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,13 +1,13 @@
 style = defaultWithAlign
 
-align                      = some
-align.tokens               = [off]
 danglingParentheses        = true
 docstrings                 = JavaDoc
 indentOperator             = spray
 maxColumn                  = 120
 rewrite.rules              = [RedundantParens, SortImports, AvoidInfix]
 unindentTopLevelOperators  = true
+align                      = some
+align.tokens               = [{code = "=>", owner = "Case"}]
 align.openParenDefnSite    = true
 align.openParenCallSite    = true
 
