--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,8 +6,41 @@ indentOperator             = spray
 maxColumn                  = 120
 rewrite.rules              = [RedundantParens, SortImports, AvoidInfix]
 unindentTopLevelOperators  = true
-align                      = some
 align.tokens               = [{code = "=>", owner = "Case"}]
 align.openParenDefnSite    = true
 align.openParenCallSite    = true
-
+optIn.breakChainOnFirstMethodDot = false
+optIn.configStyleArguments = false
+danglingParentheses = false
+spaces.inImportCurlyBraces = true
+rewrite.neverInfix.excludeFilters = [
+  and
+  min
+  max
+  until
+  to
+  by
+  eq
+  ne
+  "should.*"
+  "contain.*"
+  "must.*"
+  in
+  ignore
+  be
+  taggedAs
+  thrownBy
+  synchronized
+  have
+  when
+  size
+  only
+  noneOf
+  oneElementOf
+  noElementsOf
+  atLeastOneElementOf
+  atMostOneElementOf
+  allElementsOf
+  inOrderElementsOf
+  theSameElementsAs
+]
